httpserver/specs/istio/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver
spec:
  gateways:
    - httpsserver
  hosts:
    - httpsserver.vinceleung.io
  http:
    - match:
      - uri:
          exact: "/vinceleung/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: httpserver.httpserver-istio.svc.cluster.local
            port:
              number: 80
    - match:
        - port: 443
      route:
        - destination:
            host: httpserver.httpserver-istio.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpsserver.vinceleung.io
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: vinceleung-credential
